--- a/js/templates/medication-widget.tpl.html
+++ b/js/templates/medication-widget.tpl.html
@@ -51,7 +51,7 @@
 
             <tr ng-show="goCat">
                 <td colspan="9">
-                        <table class="table table-condensed">
+                        <table class="table table-hover table-condensed">
                             <tr ng-repeat="history in medication.history">
                                 <td></td>
                                 <td>
