--- a/js/templates/main.tpl.html
+++ b/js/templates/main.tpl.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row-fluid">
-        <div class="col-sm-11 col-md-7 treatments" ng-class="[vm.user.margins, vm.user.fontSize]">
+        <div class="col-sm-23 col-md-14 treatments" ng-class="[vm.user.margins, vm.user.fontSize]">
 
             <div class="panel panel-default">
 
@@ -9,8 +9,8 @@
                         <!--<span>Behandlungstitel & Strukturen</span></a>-->
                 <!--</div>-->
 
-
                 <treatment-toolbar></treatment-toolbar>
+
 
                 <title-settings-widget></title-settings-widget>
 
@@ -25,9 +25,10 @@
                 <preset-settings-widget></preset-settings-widget>
 
                 <div class="row limit-height">
-                    <div class="col-sm-12 limit-height">
+                    <div class="col-sm-24 limit-height">
+                        <!--<div class="treatment-main-row limit-height">-->
                         <div class="row limit-height">
-                            <div class="treatments-container col-xs-11 col-lg-9">
+                            <div class="treatments-container col-xs-23 col-lg-18">
 
 
 
@@ -51,7 +52,7 @@
 
                                 <div class="row">
 
-                                    <div class="col-xs-12 centered"
+                                    <div class="col-xs-24 centered"
                                          ng-hide="vm.limit == vm.filteredTreatments.length || !vm.filteredTreatments"
                                          ng-cloak>
                                         <div class="panel">
@@ -68,12 +69,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="hidden-xs hidden-sm hidden-md col-lg-3">
+                            <div class="hidden-xs hidden-sm hidden-md col-lg-6">
                                 <div class="panel panel-default">
                                     <div class="toolbar-wrapper">
                                         <div class="toolbar" ng-class="'mandator-' + vm.user.mandator.id + '-toolbar'" ng-cloak>
                                             <div class="row">
-                                                <div class="col-xs-12"><p>Titel & Strukturen</p></div>
+                                                <div class="col-xs-24"><p>Titel & Strukturen</p></div>
                                             </div>
                                         </div>
                                     </div>
@@ -81,21 +82,18 @@
                                 </div>
 
                             </div>
-                            <div class="hidden-lg col-xs-1">
-                                <!--<div>-->
-                                    <!--<a href ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget">-->
-                                        <!--<span class="type-and-preset-trigger-button-span">Behandlungstitel & Strukturen</span>-->
-                                    <!--</a>-->
-                                <!--</div>-->
 
-                                <div class="type-and-preset-trigger-button-span" ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget">
-                                    Titel & Strukturen
-                                </div>
 
+                            <!-- TODO dirty styles in HTML, wie soll ich das besser machen? -->
+                            <div class="hidden-lg col-xs-1" style="padding: 0px">
+                                <a class="btn btn-default type-and-preset-trigger-button" ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget">
+                                    <span>Titel & Strukturen</span>
+                                </a>
                                 <div ng-show="vm.showTypeAndPresetWidget || vm.temporarilyShowTypeAndPresetWidget"
                                      achilles-widget
                                      widget-width="300"
-                                     widget-position-right="10"
+                                     widget-position-left="-300"
+                                     widget-position-top="0"
                                      widget-position="absolute">
                                     <type-and-preset-widget></type-and-preset-widget>
                                 </div>
@@ -115,31 +113,37 @@
                 <a class="btn btn-default" id="show-medication-widget"
                    ng-click="vm.showMedicationWidget=!vm.showMedicationWidget">M</a>
             </div>
-            <div class="btn-group">
-                <a class="btn btn-danger">B</a>
-            </div>
-            <div class="btn-group">
-                <a class="btn btn-info">L</a>
-            </div>
+            <!--<div class="btn-group">-->
+                <!--<a class="btn btn-danger">B</a>-->
+            <!--</div>-->
+            <!--<div class="btn-group">-->
+                <!--<a class="btn btn-info">L</a>-->
+            <!--</div>-->
             <!--<div class="btn-group">-->
                 <!--<a class="btn btn-info" ng-click="vm.showTypeAndPresetWidget = !vm.showTypeAndPresetWidget">T&P</a>-->
             <!--</div>-->
+
+
+                 <!--widget-width="80%"-->
+                 <!--widget-align-to-element="#show-medication-widget"-->
             <div achilles-widget
-                 widget-width="80%"
-                 widget-align-to-element="#show-medication-widget"
+                 widget-width="800"
+                 widget-position-left="-790"
+                 widget-position-top="0"
+                 widget-position="absolute"
                  ng-show="vm.showMedicationWidget || false">
                 <medication-widget></medication-widget>
             </div>
         </div>
-        <div class="col-md-5 hidden-sm hidden-xs">
+        <div class="col-md-10 hidden-sm hidden-xs">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-24">
                     <medication-widget></medication-widget>
 
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-24">
                     <div class="panel panel-info">
                         <div class="panel-heading">
                             <h4>Biometrische Daten</h4>
