First try with 24 grid

--- a/js/templates/main.tpl.html
+++ b/js/templates/main.tpl.html
@@ -142,48 +142,48 @@
 
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-24">
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            <h4>Biometrische Daten</h4>
-                        </div>
-                        <div class="list-group">
-                            <a href class="list-group-item">
-                                <div class="row">
-                                    <div class="col-xs-6">
-                                        <p>Puls</p>
-                                    </div>
-                                    <div class="col-xs-6">
-                                        <p>normal</p>
-                                    </div>
-                                </div>
-                            </a>
-                            <a href class="list-group-item">
-                                <div class="row">
-                                    <div class="col-xs-6">
-                                        <p>Blutdruck</p>
-                                    </div>
-                                    <div class="col-xs-6">
-                                        <p>zu tief</p>
-                                    </div>
-                                </div>
-                            </a>
-                            <a href class="list-group-item">
-                                <div class="row">
-                                    <div class="col-xs-6">
-                                        <p>Cholesterin</p>
-                                    </div>
-                                    <div class="col-xs-6">
-                                        <p>Homer Simpson!</p>
-                                    </div>
-                                </div>
-                            </a>
+            <!--<div class="row">-->
+                <!--<div class="col-sm-24">-->
+                    <!--<div class="panel panel-info">-->
+                        <!--<div class="panel-heading">-->
+                            <!--<h4>Biometrische Daten</h4>-->
+                        <!--</div>-->
+                        <!--<div class="list-group">-->
+                            <!--<a href class="list-group-item">-->
+                                <!--<div class="row">-->
+                                    <!--<div class="col-xs-6">-->
+                                        <!--<p>Puls</p>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-xs-6">-->
+                                        <!--<p>normal</p>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</a>-->
+                            <!--<a href class="list-group-item">-->
+                                <!--<div class="row">-->
+                                    <!--<div class="col-xs-6">-->
+                                        <!--<p>Blutdruck</p>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-xs-6">-->
+                                        <!--<p>zu tief</p>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</a>-->
+                            <!--<a href class="list-group-item">-->
+                                <!--<div class="row">-->
+                                    <!--<div class="col-xs-6">-->
+                                        <!--<p>Cholesterin</p>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-xs-6">-->
+                                        <!--<p>Homer Simpson!</p>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</a>-->
 
-                        </div>
-                    </div>
-                </div>
-            </div>
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
 
 
