First try with 24 grid

--- a/js/templates/medication-widget.tpl.html
+++ b/js/templates/medication-widget.tpl.html
@@ -9,7 +9,7 @@
                     <div class="btn-group pull-right">
                         <a class="btn btn-default btn-xs treatment-report"
                            tooltip="{{ 'NEW_TREATMENT_TODAY_TOOLTIP' | translate}}" tooltip-placement="bottom"
-                           ng-click="toolbar.addTreatment(vm.treatments)">&nbsp;</a>
+                           ng-click="">&nbsp;</a>
                     </div>
                 </div>
             </div>
