--- a/js/templates/medication-widget.tpl.html
+++ b/js/templates/medication-widget.tpl.html
@@ -1,10 +1,8 @@
 <div class="panel panel-default">
-
-
     <div class="toolbar-wrapper">
         <div class="toolbar" ng-class="'mandator-' + vm.user.mandator.id + '-toolbar'" ng-cloak>
             <div class="row">
-                <div class="col-xs-12"><p><strong>Medikamentenplan</strong></p></div>
+                <div class="col-xs-12"><p><small><strong>Medikamentenplan</strong></small></p></div>
                 <div class="col-xs-12">
                     <div class="btn-group pull-right">
                         <a class="btn btn-default btn-xs treatment-report"
@@ -17,6 +15,7 @@
     </div>
 
     <small>
+        <div col-xs-24>
     <table class="table table-hover table-condensed">
         <thead>
         <tr>
@@ -84,5 +83,6 @@
             </tr>
         </tbody>
     </table>
+    </div>
     </small>
 </div>
