--- a/js/templates/treatment-toolbar.tpl.html
+++ b/js/templates/treatment-toolbar.tpl.html
@@ -1,9 +1,8 @@
 <div class="toolbar-wrapper">
-    <!-- TODO wieso brauche ich hier eine Margin von -15 -->
-    <div class="toolbar" style="margin-right: -15px" ng-class="'mandator-' + vm.user.mandator.id + '-toolbar'" ng-cloak>
+    <div class="toolbar" ng-class="'mandator-' + vm.user.mandator.id + '-toolbar'" ng-cloak>
         <div class="row">
             <div class="col-xs-4">
-                <p ng-show="vm.treatments.length"><strong>{{'TREATMENT_ENTRIES' | translate}}</strong></p>
+                <p ng-show="vm.treatments.length"><small><strong>{{'TREATMENT_ENTRIES' | translate}}</strong></small></p>
             </div>
             <div class="col-xs-4">
                 <p ng-show="vm.treatments.length"
@@ -13,16 +12,15 @@
                    translate-value-total="{{vm.filteredTreatments.length}}"
                    ></p>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 small-fonts">
                 <div class="input-group">
-
                     <input class="form-control" ng-model="vm.search.text" placeholder="{{'SEARCH' | translate}}">
                     <span class="input-group-btn">
                         <a tooltip="{{ 'ADVANCED_SEARCH_TOOLTIP' | translate}}" tooltip-placement="bottom" href class="btn btn-default btn-xs" ng-click="toolbar.showAdvancedSearch(true)"><i class="fa fa-plus"></i></a>
                     </span>
                 </div>
             </div>
-            <div class="col-xs-9">
+            <div class="col-xs-9 small-fonts">
                 <div class="btn-toolbar pull-right">
                     <div class="dropdown icon-dropdown" toggle-focus dropdown>
 
@@ -85,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 small-fonts">
                 <div class="btn-group pull-right">
                     <div class="dropdown" toggle-focus dropdown>
 
